# repo-position-coupling-index

./: .gitignore  AGENTS.md  PRODUCT_BRIEF.md  README.md  STATUS.md  SYSTEM_MAP.md  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
config/: pillars.yaml  repos.yaml
coupling_index/: 2026-M07.md
docs/: first-pr.md  product-brief.md  system-map.md
examples/: 2026-M07-EXAMPLE.md  2026-M08-EXAMPLE.md
repo_position_coupling_index/: __init__.py  __main__.py  cli.py  diff.py  frontmatter.py  model.py  render.py  scoring.py  show.py
reports/: 2026-M07.jsonl
schemas/: coupling_index.schema.json  coupling_row.schema.json
scripts/: spec_check.py  validate_coupling_index.py  voice_lint.py
specs/0001-foundation/: acceptance.md  design.md  requirements.md  tasks.md
specs/0002-design/: acceptance.md  design.md  requirements.md  tasks.md
src/coupling/: __init__.py  __main__.py  cli.py  diff.py  flagger.py  frontmatter.py  render.py  schema.py
tests/: test_cli_errors.py  test_diff.py  test_flagger.py  test_render_roundtrip.py  test_schemas.py  test_show.py
