[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-position-coupling-index"
version = "0.1.0"
description = "Monthly repo-to-thesis-pillar coupling index."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "jsonschema>=4.21",
  "pydantic>=2.7",
  "pyyaml>=6.0",
]

[project.scripts]
coupling = "repo_position_coupling_index.cli:main"
repo-position-coupling-index = "repo_position_coupling_index.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["repo_position_coupling_index*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
